# blockscore

./: .env.example  README.md  package-lock.json  package.json  tailwind.config.js
anchor/: Anchor.toml  Cargo.toml  README.md  package.json  tsconfig.json
anchor/app/: client.ts
anchor/migrations/: deploy.ts
anchor/programs/blockscore/: Cargo.toml
anchor/programs/blockscore/src/: lib.rs
anchor/tests/: blockscore.ts
api/: README.md  package.json  render.yaml
api/src/: index.js
docs/: HISTORICAL_TRACKING.md
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/batch/: route.ts
src/app/api/og/: route.tsx
src/app/api/score/: route.ts
src/app/compare/: page.tsx
src/app/docs/: page.tsx
src/app/leaderboard/: page.tsx
src/components/: ScoreCard.tsx
src/lib/: score.ts  sns.ts
