[package]
name = "blockscore"
version = "0.1.0"
description = "BlockScore on-chain reputation program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "blockscore"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "=0.28.0"
constant_time_eq = "=0.3.1"
